Some cleanups (mostly remove unused imports)